# xsray

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  output.txt  setflags.sh  test_scene.json
.cargo/: config
assets/: cornell_box.blend  cornell_box.blend1
assets/models/: cornell_box.blend  cornell_box.blend1
assets/scenes/: aesthetic2.yaml  aesthetic_cornell_box.yaml  aesthetic_shiny.yaml  cornell_box1.yaml  monkey.yaml  rock_diffuse.yaml  shiny1.yaml  shiny2.1.yaml  shiny2.yaml  two_tri.yaml
src/: config_loader.rs  main.rs
src/bvh/: bvh_accelerator.rs  bvh_accelerator_test.rs  mod.rs
src/engine/: bvh_accelerator.rs  camera.rs  integrator.rs  intersect_util.rs  intersectable.rs  material.rs  meshutils.rs  misc.rs  mod.rs  multi_triangle.rs  probability.rs  renderer.rs  scene.rs  scene_builder.rs  scene_spec.rs  shader.rs  test_engine.rs  transformable.rs
src/engine/bvh/: aabb.rs  bvh_accelerator.rs  bvh_intersector.rs  mod.rs  splitter.rs
src/utilities/: cmp_util.rs  codable.rs  color.rs  math.rs  mod.rs  multi_math.rs  sampler.rs  simd.rs  simple_deserialize.rs  test_helpers.rs
